C-0006 (feat): add paths for api
